# markdown2notion

./: .env.example  .gitignore  LICENSE  README.md  README_JP.md  claude_desktop_config.json  pyproject.toml  requirements-dev.txt  requirements.txt  upload_kindle.py
.github/workflows/: ci.yml
docs/: design.md  design_JP.md  mcp-beginner-guide.md  mcp-beginner-guide_JP.md
docs/api/: code-reference.md  code-reference_JP.md  mcp-tools.md  mcp-tools_JP.md
examples/: sample-document.md
src/: __init__.py  markdown_processor.py  notion_uploader.py  server.py
tests/: __init__.py  test_markdown_processor.py  test_notion_uploader.py  test_server.py
